--- a/src/components/PokeList/styles.css
+++ b/src/components/PokeList/styles.css
@@ -1,18 +1,40 @@
-.test{
-    min-width: 23rem;
+.test {
+    width: 30.4rem;
     position: absolute;
     z-index: 3;
     border-radius: 2rem;
     background-color: rgb(248, 248, 248);
-    padding: 0;
-    max-height: 20rem;
+    max-height: 23.5rem;
     overflow-y: scroll;
-    padding-left: 2rem;
-    border: 2px solid rgba(0, 0, 0, 0.603);
+    padding-left: 1rem;
     box-shadow: 15px 15px 18px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.list{
+.test::-webkit-scrollbar {
+    width: 17px;
+}
+
+::-webkit-scrollbar-button {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background: rgba(193, 69, 175, 1);
+    border: 4px solid rgba(0, 0, 0, 0.2);
+}
+
+.list {
+    font-weight: 600;
+    color: white;
+    text-align: center;
+    width: 36%;
+    background-color: rgba(193, 69, 174, 0.993);
+    border: 4px solid rgba(0, 0, 0, 0.2);
+    text-transform: capitalize;
     margin: 1rem;
     font-size: 1.4rem;
     cursor: pointer;
@@ -22,8 +44,6 @@
     transition: transform 0.5s;
 }
 
-.list:hover{
-        transform: scale(1.1);
-      
+.list:hover {
+    transform: scale(1.1);
 }
-
