--- a/src/components/HeaderMenu/styles.css
+++ b/src/components/HeaderMenu/styles.css
@@ -3,7 +3,7 @@
 header {
     width: 100%;
     background: linear-gradient(90deg, rgba(120, 86, 254, 1) 0%, rgba(193, 69, 175, 1) 57%);
-
+    text-shadow: 0px 4px 13px #DC0A2D;
 }
 
 header .container {
