--- a/src/components/SectionPokedex/styles.css
+++ b/src/components/SectionPokedex/styles.css
@@ -10,17 +10,17 @@
     color: white;
 }
 
-.container__text h1{
+.container__text h1 {
     font-size: 4.5rem;
     margin: 1rem;
 }
 
-.container__text h5{
+.container__text h5 {
     margin: 0;
     font-size: 2rem;
 }
 
-.container__text{
+.container__text {
     margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
@@ -33,23 +33,45 @@
     max-width: 40%;
 }
 
-.main img {
-    width: 100%;
+.box-image {
+
+    width: 40%;
+    height: 32rem;
+    padding: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     animation: float 3s ease-in-out infinite;
 }
 
-@keyframes float{
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(-25px);
-    }
-    100%{
-        transform: translateY(0);
+@media (min-width: 300px) {
+    .box-image img {
+        max-width: 25rem;
     }
 }
 
-.main {
-    margin: 2.5rem;
+@media (min-width: 600px) {
+    .box-image img {
+        max-width: 30rem;
+    }
+}
+
+@media (min-width: 900px) {
+    .box-image img {
+        max-width: 40rem;
+    }
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-25px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
